# litechain-esp32_c3

./: .cproject  .gitmodules  .project  CMakeLists.txt  README.en.md  README.md  http_client.py  litechain-esp32_c3.code-workspace  sdkconfig  sdkconfig.ci  sdkconfig.ci.old  sdkconfig.old
main/: CMakeLists.txt  http_request_example_main.c  litechain_cfg.h
